# skylock

./: .gitignore  .gitlab-cd.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  ROADMAP.md  design-proposal.md  pyproject.toml  readme.md
backend/: .pylintrc  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint_dev.sh  entrypoint_prod.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 3b8b51beb911_removed_disk_filepath_field_for_file.py  3cfde12aa1f8_files_and_folders_with_relations.py  492f82801e43_potential_fix_to_folderentity.py  4f3fee2bf8c0_create_a_baseline_migrations.py  79368920e70e_uuid_to_string_in_ids.py  a5b4e65c5e88_add_is_public_column_to_files_and_folder.py
backend/skylock/: app.py  config.py  main.py  skylock_facade.py
backend/skylock/api/: app.py  auth_routes.py  dependencies.py  file_routes.py  folder_routes.py  models.py  public_file_routes.py  public_folder_routes.py  shared_routes.py  validation.py
backend/skylock/api/routes/: auth_routes.py  download_routes.py  file_routes.py  folder_routes.py  public_routes.py  share_routes.py  upload_routes.py
backend/skylock/core/: dependencies.py  env.py  exceptions.py  security.py
backend/skylock/database/: models.py  repository.py  session.py
backend/skylock/pages/: dependencies.py  html_builder.py  page_router.py
backend/skylock/repository/: config.py  user_repository.py
backend/skylock/repository/model/: user_entity.py
backend/skylock/service/: path_resolver.py  resource_service.py  response_builder.py  user_service.py  zip_service.py
backend/skylock/service/model/: user.py
backend/skylock/utils/: exception_handlers.py  exceptions.py  path.py  security.py  storage.py  url_generator.py
backend/templates/: 403.html  404.html  file.html  folder_contents.html  index.html
backend/tests/: conftest.py  test_main.py
backend/tests/integration/: conftest.py
backend/tests/integration/api/: test_auth_routes.py  test_file_routes.py  test_folder_routes.py
backend/tests/service/: test_user_service.py
backend/tests/unit/core/: test_security.py
backend/tests/unit/service/: conftest.py  test_path_resolver.py  test_resource_service.py  test_url_generator.py  test_user_service.py
backend/tests/unit/utils/: test_path.py  test_security.py  test_storage.py
backend/zprp_file_sharing/: dependencies.py  main.py
backend/zprp_file_sharing/api/: auth_routes.py
backend/zprp_file_sharing/api/model/: login_user_request.py
backend/zprp_file_sharing/core/: dependencies.py  security.py
backend/zprp_file_sharing/repository/: user_repository.py
backend/zprp_file_sharing/repository/config/: db_config.py
backend/zprp_file_sharing/repository/model/: user_entity.py
backend/zprp_file_sharing/service/: user_service.py
cli/: .pylintrc  Makefile  README.md  mkdocs.yml  pyproject.toml  test.txt  tox.ini
cli/cli_client/: app.py
cli/docs/: api_endpoints.md  api_exceptions.md  cli.md  commands.md  custom_exceptions.md  index.md
cli/skylock_cli/: app.py  cli.py  config.py
cli/skylock_cli/api/: api_exceptions.py  auth_requests.py  bearer_auth.py  dir_requests.py  file_requests.py  http_client.py  http_exception_handler.py  http_exceptions.py  nav_requests.py  resource_requests.py
cli/skylock_cli/commands/: auth.py
cli/skylock_cli/commands/auth/: register.py
cli/skylock_cli/core/: auth.py  context_manager.py  dir_operations.py  file_operations.py  nav.py  path_parser.py  resource_operations.py  url_manager.py
cli/skylock_cli/exceptions/: api_exceptions.py  core_exceptions.py
cli/skylock_cli/model/: context.py  dir.py  directory.py  file.py  resource.py  resource_visibility.py  share_link.py  token.py  user.py  user_dir.py
cli/skylock_cli/scripts/: setup_config.py
cli/skylock_cli/utils/: api_exception_handler.py  cli_exception_handler.py  http_exceptions.py
cli/tests/: helpers.py  test_app.py  test_cli.py
cli/tests/api/: test_bearer_auth.py
cli/tests/commands/: test_cd.py  test_download.py  test_login.py  test_ls.py  test_make_private.py  test_make_public.py  test_mkdir.py  test_pwd.py  test_register.py  test_rm.py  test_rmdir.py  test_set_url.py  test_share.py  test_upload.py
cli/tests/core/: test_auth.py  test_context_manager.py  test_dir_operations.py  test_file_operations.py  test_nav.py  test_path_parser.py  test_resource_operations.py  test_url_manager.py
cli/tests/model/: test_context.py  test_directory.py  test_file.py  test_resource.py  test_resource_visibility.py  test_share_link.py  test_token.py  test_user.py
cli/tests/scripts/: test_setup_config.py
cli_client/: app.py
docs/: commands.md  index.md
tests/: test_app.py
