[tool.poetry]
name = "cli_client"
version = "0.1.0"
description = ""
authors = ["Oliwier Szypczyn <01178608@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pytest = "^8.3.3"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "cli_client.app:app"
