[tool.poetry]
name = "skylock"
version = "0.1.0"
description = ""
authors = ["akempins <01178535@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pylint = "^3.3.1"
fastapi = "^0.115.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
bcrypt = "^4.2.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
black = "^24.10.0"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated and scheduled for removal in a future version:DeprecationWarning",
]
