[tool.poetry]
name = "skylock_cli"
version = "0.1.0"
description = ""
authors = ["Oliwier Szypczyn <01178608@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pytest = "^8.3.3"
click = "^8.1.7"
pylint = "^3.3.1"
pyyaml = "^6.0.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.41"
mkdocstrings = "^0.26.2"
mkdocs-material-extensions = "^1.3.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.9"
pre-commit = "^4.0.1"
mkdocstrings-python = "^1.12.2"
pymdown-extensions = "^10.11.2"
pygments = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slock = "skylock_cli.app:app"
