[tool.poetry]
authors = ["Oliwier Szypczyn <01178608@pw.edu.pl>"]
description = "Skylock CLI is a command line interface for Skylock API."
name = "skylock_cli"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
appdirs = "^1.4.4"
art = "^6.3"
click = "^8.1.7"
coverage = "^7.6.4"
httpx = "^0.27.2"
jwt = "^1.3.1"
mkdocs = "^1.6.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.9"
mkdocs-material = "^9.5.41"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"
pre-commit = "^4.0.1"
pydantic = "^2.9.2"
pygments = "^2.18.0"
pylint = "^3.3.1"
pymdown-extensions = "^10.11.2"
pytest = "^8.3.3"
python = ">=3.9.0"
python-jose = "^3.3.0"
pyyaml = "^6.0.2"
typer = "^0.12.5"
tox = "^4.23.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
setup_config = "skylock_cli.scripts.setup_config:create_config_file"
setup_downloads = "skylock_cli.scripts.setup_config:create_downloads_dir"
slock = "skylock_cli.cli:app"

[tool.pylint]
disable = [
    "C0301", # Line too long
    "W0511", # TODO
    "E1101", # Instance of '...' has no '...' member -> Pydantic models for pytests
    "W0622", # Redefining built-in 'id' -> For custom errors
    "E0213", # Method should have "self" as first argument -> For field validators
    "W0621", # Redefining name from outer scope -> For pytest fixtures
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:.*jose.jwt.*"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311, py312, py313

[testenv]
deps =
  poetry
commands =
  poetry install
  poetry run pytest
"""

[tool.coverage.run]
branch = true
source = ["skylock_cli"]

[tool.coverage.report]
exclude_lines = ["def __init__", "if __name__ == .__main__.:", "tests/*"]

